some tiny changes

--- a/APSA_2012/Paper/APSA_Paper_2012.tex
+++ b/APSA_2012/Paper/APSA_Paper_2012.tex
@@ -295,7 +295,7 @@ $p(\mathbf{y}|\mathbf{f}_1^{s|t}, \ldots,
 \mathbf{f}_K^{s|t})=\overset{K}{\underset{k=1}{\sum}} w_k
 g_k(\mathbf{y}|\mathbf{f}_k^{s|t})$, where $w_k \in [0,1]$ are model
 probabilities, $p(M_k|\mathbf{y}^t)$, and $\sum_{k=1}^Kw_k=1$. The
-ensemble predictive PDF with this notation is is then
+ensemble predictive PDF with this notation is then
 $p(y|f_{1}^{t^\ast}, \ldots,
 f_{K}^{t^\ast})=\overset{K}{\underset{k=1}{\sum}} w_k
 g_k(y|f_{k}^{t^*})$.
