edits and figure fix

--- a/APSA_2012/Paper/APSA_Paper_2012.tex
+++ b/APSA_2012/Paper/APSA_Paper_2012.tex
@@ -655,7 +655,7 @@ components outperforms EBMA on every metric.
 \caption{Observed and forecasted U.S. unemployment (1981-2007)}
 \label{timeSeries}
 \begin{center}
-\includegraphics[scale=.8]{timeSeries}
+\includegraphics[scale=.8]{mdwtimeSeries2}
 \end{center}
 \end{figure}
 
